<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.jettra</groupId>
    <artifactId>JettraAppServer</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jettra.annotation.version>1.0.0-SNAPSHOT</jettra.annotation.version>
        <jettra.jwt.version>1.0.0-SNAPSHOT</jettra.jwt.version>
        <jettra.gprc.version>1.0.0-SNAPSHOT</jettra.gprc.version>
        <jettra.rules.version>1.0.0-SNAPSHOT</jettra.rules.version>
        <jettra.json.version>1.0.0-SNAPSHOT</jettra.json.version>
    </properties>

    <dependencies>
    
        <!-- JSON parsing -->
        <dependency>
            <groupId>io.jettra</groupId>
            <artifactId>JettraJSON</artifactId>
            <version>${jettra.json.version}</version>
               <scope>provided</scope>
        </dependency>

        <!-- Jettra JWT Library -->
  
        

        <dependency>
            <groupId>io.jettra</groupId>
            <artifactId>JettraJWT</artifactId>
            <version>${jettra.jwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.jettra</groupId>
            <artifactId>JettraGRPC</artifactId>
            <version>${jettra.gprc.version}</version>
            <scope>provided</scope>
        </dependency>
         
         
         
         
        <dependency>
            <groupId>io.jettra</groupId>
            <artifactId>JettraRules</artifactId>
            <version>${jettra.rules.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.jettra</groupId>
            <artifactId>JettraAnnotation</artifactId>
            <version>${jettra.annotation.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.jettra</groupId>
                            <artifactId>JettraAnnotation</artifactId>
                            <version>${jettra.annotation.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>io.jettra.server.JettraServer</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
	<repositories>
		<repository>
		    <id>jitpack.io</id>
		    <url>https://jitpack.io</url>
		</repository>
	</repositories>

</project>
